--- a/styles.css
+++ b/styles.css
@@ -38,15 +38,34 @@ textarea {
 button {
     margin-top: 10px;
     padding: 10px;
-    background-color: #4CAF50;
-    color: white;
     border: none;
     cursor: pointer;
     border-radius: 5px;
+    color: white;
 }
 
-button:hover {
-    background-color: #45a049;
+.submit-btn {
+    background-color: #9b59b6; /* بنفش */
+}
+
+.submit-btn:hover {
+    background-color: #8e44ad;
+}
+
+.edit-btn {
+    background-color: #f1c40f; /* زرد */
+}
+
+.edit-btn:hover {
+    background-color: #f39c12;
+}
+
+.delete-btn {
+    background-color: #e74c3c; /* قرمز */
+}
+
+.delete-btn:hover {
+    background-color: #c0392b;
 }
 
 #search {
