--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'IRANSans', sans-serif; /* تغییر به فونت IRANSans */
+    font-family: 'IRANSans', sans-serif;
     direction: rtl;
     text-align: right;
 }
