--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ tr:hover {
 
 #days {
     display: flex;
-    flex-wrap: nowrap; /* قرار دادن روزها در یک خط */
+    flex-direction: column;
     gap: 10px;
     padding: 10px;
     border: 1px solid #ddd;
@@ -114,8 +114,18 @@ tr:hover {
     background-color: #f9f9f9;
 }
 
-#days label {
+.checkbox-group {
+    display: flex;
+    flex-wrap: wrap; /* نمایش در چند خط */
+    gap: 10px;
+}
+
+.checkbox-group label {
     margin: 0;
     white-space: nowrap; /* جلوگیری از شکست متن */
 }
 
+#time {
+    width: 100%;
+    padding: 5px;
+}
